v4l2: display stride and width values if stride is too small

https://bugzilla.gnome.org/show_bug.cgi?id=792596